# rsa-ver-chain

./: .gitignore  Cargo.toml  README.md  chain_spec.json
.github/workflows/: test-zombienet.yml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/: LICENSE-APACHE
pallets/template/: Cargo.toml
pallets/template/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
