[workspace.package]
license = "MIT-0"
authors = ["Parity Technologies <admin@parity.io>"]
homepage = "https://paritytech.github.io/polkadot-sdk/"
repository = "https://github.com/paritytech/polkadot-sdk-rsa-verification-parachain.git"
edition = "2021"

[workspace]
default-members = ["pallets/template", "runtime"]
members = ["node", "pallets/template", "runtime"]
resolver = "2"

[workspace.dependencies]
rsa-verification-parachain-runtime = { path = "./runtime", default-features = false }
pallet-rsa-verification-parachain = { path = "./pallets/template", default-features = false }
clap = { version = "4.5.13" }
codec = { version = "3.6.12", default-features = false, package = "parity-scale-codec" }
color-print = { version = "0.3.4" }
docify = { version = "0.2.9" }
futures = { version = "0.3.31" }
jsonrpsee = { version = "0.24.3" }
log = { version = "0.4.22", default-features = false }
polkadot-sdk = { version = "0.12.2", default-features = false }
prometheus-endpoint = { version = "0.17.1", default-features = false, package = "substrate-prometheus-endpoint" }
sc-tracing = { version = "38.0.0", default-features = false }
serde = { version = "1.0.214", default-features = false }
serde_json = { version = "1.0.132", default-features = false }
cumulus-pallet-parachain-system = { version = "0.18.1", default-features = false }
hex-literal = { version = "0.4.1", default-features = false }
scale-info = { version = "2.11.1", default-features = false }
smallvec = { version = "1.11.0", default-features = false }
substrate-wasm-builder = { version = "25.0.0", default-features = false }
frame = { version = "0.8.1", default-features = false, package = "polkadot-sdk-frame" }
# RSA cryptography dependencies
rsa = { version = "0.9.2", default-features = false }
sha2 = { version = "0.10.8", default-features = false }
spki = { version = "0.7.2", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
