[package]
name = "pallet-rsa-verification-parachain"
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "Apache-2.0"
license-file = "LICENSE-APACHE"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame = { workspace = true, features = [
    "experimental",
    "runtime",
], default-features = false }
sp-std = { workspace = true, default-features = false }

# RSA cryptography
rsa = { workspace = true, default-features = false, features = ["sha2"] }
sha2 = { workspace = true, default-features = false }
spki = { workspace = true, default-features = false }

[dev-dependencies]
base64 = "0.21.0"
rand = "0.8.5"

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = [
    "codec/std",
    "frame/std",
    "scale-info/std",
    "rsa/std",
    "sha2/std",
    "spki/std",
    "sp-std/std",
]
try-runtime = ["frame/try-runtime"]
